fix modal close button missing z-index

--- a/src/sass/patterns/_modal.scss
+++ b/src/sass/patterns/_modal.scss
@@ -27,6 +27,10 @@ Styleguide Patterns.Modal
 */
 .modal {
   .modal-header {
+    .close {
+      z-index: 1;
+    }
+
     .icon-cross {
       height: 13px;
       width: 13px;
